# fintrend-ai

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
backend/: Makefile  pyproject.toml
backend/api/: main.py
backend/api/routes/: sentiment.py
backend/ingestors/: common.py  reddit_producer.py  rss_producer.py
backend/jobs/: backfill_sentiment.py
backend/nlp/: sentiment_consumer.py  sentiment_service.py
backend/storage/sql/: 000_init.sql  001_hypertables.sql  002_indexes.sql  003_sentiment_rollups.sql
backend/workers/: news_consumer.py  sentiment_consumer.py
docs/: architecture.md  data-contracts.md  runbook.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
infra/compose/: docker-compose.yml
infra/prometheus/: prometheus.yml
notebooks/: README.md
