[project]
name = "fintrend-ai-backend"
version = "0.1.0"
description = "FastAPI backend for FinTrend AI"
requires-python = ">=3.11"
dependencies = []  # Day 2: add fastapi, uvicorn, pydantic, redis, psycopg2-binary, etc.

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","N","S","C90"]
ignore = ["E203","W503"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["backend/tests"]
